tests/miniJava/neg/004211_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java if extends java { }
